--- a/package.json
+++ b/package.json
@@ -9,40 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.0",
     "@react-native-community/checkbox": "^0.5.15",
-    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "expo": "^48.0.0",
-    "expo-camera": "~13.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-image-picker": "~14.1.1",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "country-state-city": "^3.2.1",
+    "eas-cli": "^7.3.0",
+    "expo": "^50.0.11",
+    "expo-camera": "~14.0.6",
+    "expo-file-system": "~16.0.8",
+    "expo-image-picker": "~14.7.1",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.73.4",
     "react-native-calendar-picker": "^6.1.5",
     "react-native-calendars": "^1.1275.0",
     "react-native-date-ranges": "^2.5.0",
-    "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-gifted-chat": "^2.1.0",
     "react-native-modal-datetime-picker": "13.0.0",
     "react-native-modals": "^0.22.3",
-    "react-native-pager-view": "6.1.2",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.7.2",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
